Added Video file types

--- a/celebrate.html
+++ b/celebrate.html
@@ -124,9 +124,8 @@
        <div class="content">
           
             <video id="bgvideo" autoplay="true" loop>
-                <source src="image/Bokeh1-Stock%20Video.mov">
-                <source src="video.mp4" type="video/mp4">
-                <source src="" type="video/webm">
+                <source src="image/Bokeh1.webmvp8.webm" type="video/webm">
+                <source src="image/Bokeh1.mp4" type="video/mp4">
             </video>
            
            <img class="main center-block img-responsive animated fadeIn" src="image/SavetheDate_graphic.svg" alt="Save the Date - 29th November 2015">
