Changes to Video BG + Image

--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
       <script>
           
           // Initializing CEREMONY countdown
+          // Have to make the time 1 hor early to be accurate...
 
             var weddingDay = new Countdown({  // Custom
               selector: '.wedding-day',
-              dateEnd: new Date('2015/11/28 4:30 PM'),
+              dateEnd: new Date('2015/11/28 3:30 PM'),
               msgPattern : 'Ceremony in {months} months, {days} days, {hours} hours, {minutes} minutes <span class="no-break">&amp; {seconds} seconds!</span>'
             });
           
